#26 Update a doc regarding debug option